ignoring sitemap.xml.

--- a/FluentSitemap.Core/FluentSitemap.Core.csproj
+++ b/FluentSitemap.Core/FluentSitemap.Core.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChangeFrequencyType.cs" />
     <Compile Include="ISitemap.cs" />
     <Compile Include="ISitemapNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
