--- a/FluentSitemap.Core/FluentSitemap.Core.csproj
+++ b/FluentSitemap.Core/FluentSitemap.Core.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="ChangeFrequencyType.cs" />
     <Compile Include="ISitemap.cs" />
+    <Compile Include="ISitemapMetadata.cs" />
     <Compile Include="ISitemapNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sitemap.cs" />
