--- a/FluentSitemap.Core/FluentSitemap.Core.csproj
+++ b/FluentSitemap.Core/FluentSitemap.Core.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ISitemap.cs" />
     <Compile Include="ISitemapMetadata.cs" />
     <Compile Include="ISitemapNode.cs" />
+    <Compile Include="It.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sitemap.cs" />
     <Compile Include="SitemapHelper.cs" />
