--- a/FluentSitemap.Core/FluentSitemap.Core.csproj
+++ b/FluentSitemap.Core/FluentSitemap.Core.csproj
@@ -45,15 +45,16 @@
   <ItemGroup>
     <Compile Include="ChangeFrequencyType.cs" />
     <Compile Include="ISitemap.cs" />
+    <Compile Include="ISitemapConfigurator.cs" />
     <Compile Include="ISitemapMetadata.cs" />
     <Compile Include="ISitemapNode.cs" />
     <Compile Include="It.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sitemap.cs" />
+    <Compile Include="SitemapConfigurator.cs" />
     <Compile Include="SitemapHelper.cs" />
     <Compile Include="SitemapNode.cs" />
     <Compile Include="SitemapNodeValidator.cs" />
-    <Compile Include="SitemapScanner.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
